<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayDark"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/fontTextColor"
            android:textSize="48sp" />


        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:width="250dp"
            android:textColor="@color/fontTextColor"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:width="250dp"
            android:textColor="@color/fontTextColor"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/btn2" />

    </LinearLayout>
</LinearLayout>